[gd_scene load_steps=4 format=3 uid="uid://bw8w0mew6x5p8"]

[ext_resource type="Theme" uid="uid://bjysepqligucr" path="res://assets/ui/GeneralTheme.tres" id="1_7r58g"]
[ext_resource type="Script" path="res://game/workshop_menu/WorkshopMenu.gd" id="2_hwdrt"]
[ext_resource type="PackedScene" uid="uid://dte2gdbdkw8ap" path="res://game/workshop_menu/WorkshopLevelButton.tscn" id="3_7uwtg"]

[node name="WorkshopMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7r58g")
script = ExtResource("2_hwdrt")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TopPart" type="Control" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(3840, 600)
layout_mode = 2
mouse_filter = 2

[node name="Title" type="Label" parent="ScrollContainer/VBoxContainer/TopPart"]
layout_mode = 2
offset_top = 278.0
offset_right = 3840.0
offset_bottom = 419.0
theme_override_colors/font_outline_color = Color(0, 0.0352941, 0.141176, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 120
text = "WORKSHOP_LEVELS"
horizontal_alignment = 1

[node name="OpenWorkshop" type="Button" parent="ScrollContainer/VBoxContainer/TopPart"]
layout_mode = 2
offset_left = 3002.0
offset_top = 75.0
offset_right = 3765.0
offset_bottom = 184.0
grow_horizontal = 0
focus_mode = 0
text = "OPEN_WORKSHOP"

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_top = 200
theme_override_constants/margin_bottom = 400

[node name="ButtonsContainer" type="GridContainer" parent="ScrollContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 1200
theme_override_constants/v_separation = 1000
columns = 3

[node name="WorkshopLevelButton" parent="ScrollContainer/VBoxContainer/MarginContainer/ButtonsContainer" instance=ExtResource("3_7uwtg")]
layout_mode = 2
size_flags_horizontal = 6

[node name="WorkshopLevelButton2" parent="ScrollContainer/VBoxContainer/MarginContainer/ButtonsContainer" instance=ExtResource("3_7uwtg")]
layout_mode = 2
size_flags_horizontal = 6

[node name="WorkshopLevelButton3" parent="ScrollContainer/VBoxContainer/MarginContainer/ButtonsContainer" instance=ExtResource("3_7uwtg")]
layout_mode = 2
size_flags_horizontal = 6

[node name="WorkshopLevelButton4" parent="ScrollContainer/VBoxContainer/MarginContainer/ButtonsContainer" instance=ExtResource("3_7uwtg")]
layout_mode = 2
size_flags_horizontal = 6

[node name="WorkshopLevelButton5" parent="ScrollContainer/VBoxContainer/MarginContainer/ButtonsContainer" instance=ExtResource("3_7uwtg")]
layout_mode = 2
size_flags_horizontal = 6

[node name="WorkshopLevelButton6" parent="ScrollContainer/VBoxContainer/MarginContainer/ButtonsContainer" instance=ExtResource("3_7uwtg")]
layout_mode = 2
size_flags_horizontal = 6

[node name="WorkshopLevelButton7" parent="ScrollContainer/VBoxContainer/MarginContainer/ButtonsContainer" instance=ExtResource("3_7uwtg")]
layout_mode = 2
size_flags_horizontal = 6

[node name="WorkshopLevelButton8" parent="ScrollContainer/VBoxContainer/MarginContainer/ButtonsContainer" instance=ExtResource("3_7uwtg")]
layout_mode = 2
size_flags_horizontal = 6

[node name="Back" type="Button" parent="."]
layout_mode = 2
offset_left = 60.0
offset_top = 75.0
offset_right = 302.0
offset_bottom = 184.0
focus_mode = 0
text = "BACK"

[node name="Explanation" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.5
anchor_right = 0.75
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0.0352941, 0.141176, 1)
theme_override_constants/outline_size = 15
text = "WORKSHOP_EXPLANATION"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="mouse_entered" from="ScrollContainer/VBoxContainer/TopPart/OpenWorkshop" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/TopPart/OpenWorkshop" to="." method="_on_open_workshop_pressed"]
[connection signal="mouse_entered" from="Back" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
